--- a/main.css
+++ b/main.css
@@ -2,8 +2,28 @@
     background-color: blueviolet;
 } */
 
-.header--animate {
-    animation: fadeItIn 3s linear both 1s;
+#head {
+    transform: rotate(25deg);
+}
+
+
+#headerIcon {
+    display: inline-block;
+    box-sizing: content-box;
+    width: 50px;
+    height: 100%;
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    background: url("./assets/Cow.gif");
+        background-position-x: 0%;
+        background-position-y: 0%;
+        background-repeat: repeat;
+        background-size: auto;
+        background-origin: padding-box;
+        background-clip: border-box;
+    transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
 }
 
 body {
