--- a/main.css
+++ b/main.css
@@ -1,17 +1,7 @@
-body {
-    background-color: #1d1d1d;
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    padding-top: 69px;
-    color:
-    #A2A2A2;
-    height: 100%;
-    min-height: 100% !important;
-}
-
-#head {
-    transform: rotate(180deg);
+#title {
+    /* transform: rotate(180deg); */
+    font-size: 32px;
+    font-family: 'Odibee-Sans' 'sans-serif'
 }
 
 
@@ -32,4 +22,15 @@ body {
         background-origin: padding-box;
         background-clip: border-box;
     transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+body {
+    background-color: whitesmoke;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: 300;
+    /* padding-top: 69px; */
+    color: #A2A2A2;
+    height: 100%;
+    min-height: 100% !important;
 }
