--- a/main.css
+++ b/main.css
@@ -11,12 +11,12 @@
     width: 50px;
     height: 100%;
     position: absolute;
-    content: "";
+    /* content: "";
     top: 0;
-    left: 0;
+    left: 0; */
     background: url("./assets/Cow.gif");
-        background-position-x: 0%;
-        background-position-y: 0%;
+        /* background-position-x: 0%;
+        background-position-y: 0%; */
         background-repeat: repeat;
         background-size: auto;
         background-origin: padding-box;
@@ -33,4 +33,18 @@ body {
     color: #A2A2A2;
     height: 100%;
     min-height: 100% !important;
+}
+
+.list-unstyled {
+
+}
+
+.media1 {
+
+}
+.media2 {
+
+}
+.media3 {
+
 }
